examples/tests/snapshots/17_theme_switch__headless_snapshot_default_dark.snap
---
source: examples/tests/17_theme_switch.rs
expression: "drive(&[&[]])"
---
·t·toggles·theme,·Left/Right·tabs,·Up/Down·selects
┌─────────────────·Theme:·Dark·──────────────────┐
│Info·Settings···································│
│················································│
│Alpha···········································│
│Bravo···········································│
│Charlie·········································│
│Delta···········································│
│················································│
│··Switch·to·Light·······························│
│················································│
│█████████████████████████████████░░░░░░░░░░░░░░░│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
└────────────────────────────────────────────────┘
