examples/tests/snapshots/17_theme_switch__headless_snapshot_toggle_and_navigate.snap
---
source: examples/tests/17_theme_switch.rs
expression: "drive(&[&[key(KeyCode::Char('t'))], &[key(KeyCode::Right)],\n&[key(KeyCode::Down)],])"
---
·t·toggles·theme,·Left/Right·tabs,·Up/Down·selects
┌─────────────────·Theme:·Light·─────────────────┐
│Info·Settings···································│
│················································│
│Alpha···········································│
│Bravo···········································│
│Charlie·········································│
│Delta···········································│
│················································│
│···Switch·to·Dark·······························│
│················································│
│█████████████████████████████████░░░░░░░░░░░░░░░│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
└────────────────────────────────────────────────┘

--- frame ---
·t·toggles·theme,·Left/Right·tabs,·Up/Down·selects
┌─────────────────·Theme:·Light·─────────────────┐
│Info·Settings···································│
│················································│
│Alpha···········································│
│Bravo···········································│
│Charlie·········································│
│Delta···········································│
│················································│
│···Switch·to·Dark·······························│
│················································│
│█████████████████████████████████░░░░░░░░░░░░░░░│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
└────────────────────────────────────────────────┘

--- frame ---
·t·toggles·theme,·Left/Right·tabs,·Up/Down·selects
┌─────────────────·Theme:·Light·─────────────────┐
│Info·Settings···································│
│················································│
│Alpha···········································│
│Bravo···········································│
│Charlie·········································│
│Delta···········································│
│················································│
│···Switch·to·Dark·······························│
│················································│
│█████████████████████████████████░░░░░░░░░░░░░░░│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
│················································│
└────────────────────────────────────────────────┘
