examples/tests/snapshots/17_theme_switch__png_snapshot_light.snap
---
source: examples/tests/17_theme_switch.rs
expression: png
extension: png
snapshot_kind: binary
---
