examples/tests/snapshots/17_theme_switch__svg_snapshot_light.snap
---
source: examples/tests/17_theme_switch.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="436" height="466">
<rect width="100%" height="100%" fill="#111111"/>
<text font-family="monospace" font-size="14" y="26.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0"> </tspan>
  <tspan fill="#1464d2" x="16.4">t toggles theme, Left/Right tabs, Up/Down selects</tspan>
</text>
<text font-family="monospace" font-size="14" y="44.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">┌───────────────── Theme: Light ─────────────────┐</tspan>
</text>
<text font-family="monospace" font-size="14" y="62.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#f0f0f6" x="16.4" style="background:#1464d2">Info</tspan>
  <tspan fill="#cccccc" x="50.0" style="background:#ffffff"> </tspan>
  <tspan fill="#828496" x="58.4" style="background:#ffffff">Settings</tspan>
  <tspan fill="#cccccc" x="125.6" style="background:#ffffff">                                   </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="80.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="98.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#f0f0f6" x="16.4" style="background:#1464d2">Alpha</tspan>
  <tspan fill="#cccccc" x="58.4" style="background:#1464d2">                                           </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="116.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#141620" x="16.4" style="background:#ffffff">Bravo</tspan>
  <tspan fill="#cccccc" x="58.4" style="background:#ffffff">                                           </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="134.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#141620" x="16.4" style="background:#ffffff">Charlie</tspan>
  <tspan fill="#cccccc" x="75.2" style="background:#ffffff">                                         </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="152.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#141620" x="16.4" style="background:#ffffff">Delta</tspan>
  <tspan fill="#cccccc" x="58.4" style="background:#ffffff">                                           </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="170.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="188.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#141620" x="16.4" style="background:#ffffff">   Switch to Dark   </tspan>
  <tspan fill="#cccccc" x="184.4" style="background:#ffffff">                            </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="206.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="224.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#1464d2" x="16.4" style="background:#ffffff">█████████████████████████████████</tspan>
  <tspan fill="#828496" x="293.6" style="background:#ffffff">░░░░░░░░░░░░░░░</tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="242.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="260.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="278.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="296.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="314.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="332.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="350.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="368.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="386.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="404.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="422.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="440.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">│</tspan>
  <tspan fill="#cccccc" x="16.4" style="background:#ffffff">                                                </tspan>
  <tspan fill="#a0a4b4" x="419.6" style="background:#e0e2f0">│</tspan>
</text>
<text font-family="monospace" font-size="14" y="458.0" xml:space="preserve">
  <tspan fill="#a0a4b4" x="8.0" style="background:#e0e2f0">└────────────────────────────────────────────────┘</tspan>
</text>
</svg>
